[package]
name = "pm-ui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
thiserror = "1.0.61"
x11 = { version = "2.21.0", optional = true }
gleam = "0.15.0"
tokio = { version = "1.38.0", features = ["full"] }

[build-dependencies]
pkg-config = "0.3.16"

[features]
default = ["gui"]
tui = []
gui = ["dep:x11"]
